--- a/user-front/package.json
+++ b/user-front/package.json
@@ -3,8 +3,12 @@
     "shadow-cljs": "^2.8.37"
   },
   "dependencies": {
+    "@ajusa/lit": "^1.1.0",
     "create-react-class": "^15.6.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
+  },
+  "scripts": {
+    "start": "shadow-cljs watch app"
   }
 }
